--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     </section>
     <section class="textcontent">
-        <h2>PARALAX</h2>
+        <h2>PARALLAX</h2>
         <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu volutpat odio facilisis
          mauris sit amet massa vitae tortor. Scelerisque eu ultrices vitae auctor. Quisque id diam vel quam elementum. Et malesuada fames ac turpis egestas sed tempus. Urna neque viverra justo nec 
          ultrices dui. Ut tristique et egestas quis. Diam vulputate ut pharetra sit amet aliquam id. Pretium fusce id velit ut tortor pretium viverra suspendisse potenti. Est sit amet facilisis magna etiam tempor orci. Morbi non arcu risus quis varius quam quisque id. Viverra orci sagittis eu volutpat odio facilisis mauris sit amet. Lobortis scelerisque fermentum dui faucibus 
